@@ -7,6 +7,7 @@
  * Bug Fixes:
  ** (r316) TellMeWhen_Options.lua:2831: attempt to index local "spaceControl" (a nil value)
  ** (r321) The runic power condition should now properly track runic power instead of mana.
+ ** (r324) Meta icons should once again properly inherit colors from Masque.
  
 ===v4.6.7===
  * Bug Fixes:
